--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
-MONGO_URL = mongodb+srv://sanket:sanket27@cluster0.6v8qw.mongodb.net/chat-db
+MONGO_URL = "Your mongo-db connection string"
 PORT = 5000
-JWT_SECRET = QQmxW5S7
+JWT_SECRET = "Enter a secret code"
 NODE_ENV = development
-CLOUDINARY_CLOUD_NAME = dwgcdvzwz
-CLOUDINARY_API_KEY = 115586262539511
-CLOUDINARY_API_SECRET = p2RxLYacYRPh_AyhCtt2qGhdbz8
+CLOUDINARY_CLOUD_NAME = "You cloudinary cloud name"
+CLOUDINARY_API_KEY = "Your cloudinary api key"
+CLOUDINARY_API_SECRET = "Your cloudinary api secret key"
